# pr-acceptability

./: .gitignore  README.md  data_prep.ipynb  exploring_factors.ipynb  pyproject.toml  requirements.txt  rq1.ipynb  rq2.ipynb  rq2_no_names.ipynb  rq3_limitations.ipynb  utils.py
comments_analysis/: app.py  language_classification.py  pr_comments_distribution.py  pr_language_analysis.py  pr_language_comments_analysis.py  readme.md  sentiment_analysis.py
initial-exploration/during-factors/: analysis.ipynb
initial-exploration/post-factors/: querys.sql
initial-exploration/post-factors/with_filtering/: pr_changed_files_statistics.xlsx  pr_comments_statistics.xlsx  pr_commits_statistics.xlsx  pr_days_to_closure_statistics.xlsx  pr_reviews_statistics.xlsx  querys.sql
original-analysis-scripts/: README.md  classify_pr.py  helper.py  load_AIDev.ipynb
specific_repo_exploration/: multi_repo_analyzer.py  pr_analyzer.py  repo_analyzer.py  top_pr_repos_analyzer.py
