[project]
name = "pr-acceptability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "backoff>=2.2.1",
    "bertopic>=0.17.4",
    "datasets>=4.4.1",
    "fastparquet>=2024.11.0",
    "fasttext>=0.9.3",
    "gradio>=6.0.1",
    "huggingface-hub>=0.36.0",
    "matplotlib>=3.10.7",
    "numpy<2.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
